# web-server

./: Cargo.toml  README.md  build.rs
assets/: index.css  index.html
src/: main.rs
