[package]
name = "webserver"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
http = "1.3.1"
http-body-util = "0.1.3"
hyper = "1.6.0"
hyper-util = { version = "0.1.10", features = ["server-auto", "tokio"] }
rustls = "0.23.23"
rustls-pki-types = "1.11.0"
tokio = { version = "1.0", features = ["full"] }
tokio-rustls = "0.26.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "ansi",
    "env-filter",
    "time",
    "tracing-log",
] }
